Updated optimized imports of RentalServiceTest class